# StarHardware

./: .gitignore  .gitmodules
ros1/src/: CMakeLists.txt
ros1/src/calibration/: calibration.py
ros1/src/monocam_record/: CMakeLists.txt  README.md  package.xml
ros1/src/monocam_record/config/: record.rviz
ros1/src/monocam_record/launch/: record_data.launch
ros1/src/monocam_record/scripts/: ros_transfer_img.py
ros1/src/monocam_record/src/: ros2img.cpp  ros2img_sync.cpp  ros_rgbd_synchronizer.cpp  ros_rgbd_synchronizer.h  ros_sync_utils.h  ros_transfer_utils.cpp  ros_transfer_utils.h
ros1/src/multicam_calibration/: CMakeLists.txt  README.md
ros1/src/multicam_calibration/config/: calibration.rviz  config.json  io.yaml
ros1/src/multicam_calibration/data/: .gitignore
ros1/src/multicam_calibration/data/result/: camera_id.yaml
ros1/src/multicam_calibration/launch/: check_camera.launch  record.launch  ros2web.launch  rs_multiple_devices_aligned.launch  start_camera.launch
ros1/src/multicam_calibration/scripts/: calibration.py  start_multi_camera.sh
ros1/src/multicam_calibration/src/: CMakeLists.txt  calibration_data.h  calibration_from_file.cpp  calibration_icp.cpp  calibration_utils.h  camera.h  load_calibration_data.cpp  multicam_apriltag_detector.hpp  ros2web.cpp  utils.h
ros1/src/ros/: .gitignore  README.md
ros1/src/ros/scripts/: calibration.rviz  record_calibration.sh
ros1/src/ros/src/multicam_calibration/: calibrator.cpp  calibrator.h  camera.cpp  multicam_apriltag_detector.cpp  package.xml  types.h
