<package format="2">
    <name>monocam_record</name>
    <version>1.0.0</version>
    <description>
    Record data from single camera.
    </description>
    <maintainer email="chnme40cs@gmail.com">Haonan Chang</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>rosbag</depend>
    <depend>message_filters</depend>
    <depend>cv_bridge</depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rospy</exec_depend>
</package>